--- a/src/components/timer.css
+++ b/src/components/timer.css
@@ -1,5 +1,5 @@
 .timer-box {
-    height: 150px;
+    height: 200px;
     width: 300px;
     border-radius: 3px;
     background-color: lightgray;
@@ -9,18 +9,26 @@
     font-size: 30px;
 }
 
+.timer-numbers {
+    font-size: 25px;
+}
+
 .button {
-    height: 20px;
-    width: 50px;
+    height: 30px;
+    width: 70px;
     border-radius: 3px;
     cursor: pointer;
     margin: 10px;
 }
 
-.start-stop {
+.start {
     background-color: lightgreen;
 }
 
-.edit {
+.stop {
     background-color: lightpink;
+}
+
+.edit {
+    background-color: lightblue;
 }
